2015-01-28  Yuri Rumyantsev  <ysrumyan@gmail.com>

	PR middle-end/64809
	* gcc.dg/pr64809.c: New test.

2015-01-28  Ilya Enkovich  <ilya.enkovich@intel.com>

	PR tree-optimization/64277
	* gcc.dg/pr64277.c: New.

2015-01-28  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	PR tree-optimization/64718
	* gcc.c-torture/execute/pr64718.c: New test.

2015-01-28  James Greenhalgh  <james.greenhalgh@arm.com>

	* gcc.target/aarch64/abs_2.c: New.

2015-01-28  Robert Suchanek  <robert.suchanek@imgtec.com>

	* lib/target-supports.exp (check_effective_target_mips_nanlegacy): New.
	* gcc.target/mips/loongson-simd.c: Require legacy NaN support.
	* gcc.target/mips/mips.exp (mips-dg-options): Imply -mnan=legacy for
	ISA rev < 2.

2015-01-28  Jakub Jelinek  <jakub@redhat.com>

	PR bootstrap/64612
	* lib/target-supports.exp (check_effective_target_comdat_group): New.
	* g++.dg/ipa/pr64612.C: Guard scan-assembler test with
	{ target comdat_group }.

2015-01-27  Tobias Burnus  <burnus@net-b.de>

	PR fortran/63861
	* gfortran.dg/goacc/coarray_2.f90: New.

2015-01-27  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/60871
	PR ipa/64139
	* g++.dg/torture/pr64139.C: New testcase.
	* g++.dg/torture/pr60871.C: Likewise.

2015-01-27  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/64230
	* gfortran.dg/class_allocate_18.f90: Remove -fsanitize option to
	prevent linking errors.

2015-01-27  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/64282
	* g++.dg/torture/pr64282.C: New testcase.

2015-01-27  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/aarch64/store-pair-1.c: Update scan-assembler to check
	for wzr reg.

2015-01-27  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc/testsuite/gcc.target/s390/hotpatch-13.c: New testcase.
	* gcc/testsuite/gcc.target/s390/hotpatch-14.c: New testcase.
	* gcc/testsuite/gcc.target/s390/hotpatch-15.c: New testcase.
	* gcc/testsuite/gcc.target/s390/hotpatch-16.c: New testcase.
	* gcc/testsuite/gcc.target/s390/hotpatch-17.c: New testcase.