@@ -1,3 +1,8 @@
+2015-01-28  Alex Velenko  <Alex.Velenko@arm.com>
+
+	* gcc.target/arm/atomic-op-consume.c (scan-assember-times): Adjust
+	scan-assembler-times pattern.
+
 2015-01-28  Yuri Rumyantsev  <ysrumyan@gmail.com>
 
 	PR middle-end/64809
